Fix pmd issues for processor-data-mongo