@@ -54,7 +54,7 @@ public final class DeleteByFilterOperationMongoRepositoryMethodModelBuilder exte
     public boolean isSupported(final DataRepositoryMethodSignature dataRepositoryMethodSignature,
                                final DataGenerationContext<MongoDataModelField, MongoDataObjectModelClass> dataGenerationContext) {
         return super.isSupported(dataRepositoryMethodSignature, dataGenerationContext) &&
-                !dataRepositoryMethodSignature.getMethod().getAnnotation(Delete.class).filter().trim().isEmpty();
+                !dataRepositoryMethodSignature.getMethod().getAnnotation(Delete.class).filter().isBlank();
     }
 
     @Override
